==> mrGrodzki/EspHome/components/st7789/st7789.c <==
#include <stdio.h>
#include "st7789.h"
#include <string.h>
#include <math.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include "fonts.h"
#define TAG "ST7789"
#define	_DEBUG_ 0
#define LCD_HOST HSPI_HOST
#define LCD_HOST SPI2_HOST
#define LCD_HOST SPI2_HOST
#define LCD_HOST SPI2_HOST
#define HOST_ID SPI2_HOST
#define HOST_ID SPI3_HOST
#define	INTERVAL		400
#define WAIT	vTaskDelay(INTERVAL)

  bool ST7789_WriteCommand(spi_device_handle_t *handle, uint8_t cmd )
{
	static uint8_t data = 0;
	data = cmd;
	gpio_set_level( CONFIG_DC_GPIO, SPI_Command_Mode );
    return spi_master_write_byte(handle, &data, 1); 
                
}

 bool ST7789_WriteData(spi_device_handle_t *handle, uint8_t *data, size_t data_size)
{
	
	gpio_set_level( CONFIG_DC_GPIO, SPI_Data_Mode );

	// split data in small chunks because HAL can't send more than 64K at once
                 return spi_master_write_byte(handle, data, data_size);
	}

 bool ST7789_WriteSmallData(spi_device_handle_t *handle, uint8_t data)
{
	static uint8_t datapoint = 0;
	datapoint = data;
	gpio_set_level( CONFIG_DC_GPIO, SPI_Data_Mode );
    return spi_master_write_byte(handle, &datapoint, 1);
}

static void ST7789_SetAddressWindow(spi_device_handle_t *handle, uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1)
{
	
	uint16_t x_start = x0 + CONFIG_OFFSETX, x_end = x1 + CONFIG_OFFSETX;
	uint16_t y_start = y0 + CONFIG_OFFSETY, y_end = y1 + CONFIG_OFFSETY;
	
	/* Column Address set */
	ST7789_WriteCommand(handle, ST7789_CASET); 
	{
		uint8_t data[] = {x_start >> 8, x_start & 0xFF, x_end >> 8, x_end & 0xFF};
		ST7789_WriteData(handle, data, sizeof(data));
	}

	/* Row Address set */
	ST7789_WriteCommand(handle, ST7789_RASET);
	{
		uint8_t data[] = {y_start >> 8, y_start & 0xFF, y_end >> 8, y_end & 0xFF};
		ST7789_WriteData(handle, data, sizeof(data));
	}
	/* Write to RAM */
	ST7789_WriteCommand(handle, ST7789_RAMWR);
	
}

void ST7789_Fill_Color(spi_device_handle_t *handle, uint16_t color)
{
	uint16_t i, j;
	ST7789_SetAddressWindow(handle, 0, 0, CONFIG_WIDTH - 1, CONFIG_HEIGHT - 1);
	for (i = 0; i < CONFIG_WIDTH; i++)
		for (j = 0; j < CONFIG_HEIGHT; j++) {
			uint8_t data[] = {color >> 8, color & 0xFF};
			ST7789_WriteData(handle, data, sizeof(data));
		}
}

void ST7789_Init(spi_device_handle_t *handle)


{
	ST7789_WriteCommand(handle, 0x01);	
    vTaskDelay(150 / portTICK_PERIOD_MS);
    ST7789_WriteCommand(handle, ST7789_COLMOD);		//	Set color mode
    vTaskDelay(150 / portTICK_PERIOD_MS);
    ST7789_WriteSmallData(handle, ST7789_COLOR_MODE_16bit);
    vTaskDelay(150 / portTICK_PERIOD_MS);
  	ST7789_WriteCommand(handle, 0xB2);				//	Porch control
    vTaskDelay(150 / portTICK_PERIOD_MS);
	{
		uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
		ST7789_WriteData(handle,data, sizeof(data));
	}
	// ST7789_SetRotation(ST7789_ROTATION);	//	MADCTL (Display Rotation)
	
	/* Internal LCD Voltage generator settings */
    ST7789_WriteCommand(handle, 0XB7);				//	Gate Control
    ST7789_WriteSmallData(handle,0x35);			//	Default value
    ST7789_WriteCommand(handle,0xBB);				//	VCOM setting
    ST7789_WriteSmallData(handle,0x19);			//	0.725v (default 0.75v for 0x20)
    ST7789_WriteCommand(handle,0xC0);				//	LCMCTRL	
    ST7789_WriteSmallData (handle,0x2C);			//	Default value
    ST7789_WriteCommand (handle,0xC2);				//	VDV and VRH command Enable
    ST7789_WriteSmallData (handle,0x01);			//	Default value
    ST7789_WriteCommand (handle,0xC3);				//	VRH set
    ST7789_WriteSmallData (handle,0x12);			//	+-4.45v (defalut +-4.1v for 0x0B)
    ST7789_WriteCommand (handle,0xC4);				//	VDV set
    ST7789_WriteSmallData (handle,0x20);			//	Default value
    ST7789_WriteCommand (handle,0xC6);				//	Frame rate control in normal mode
    ST7789_WriteSmallData (handle,0x0F);			//	Default value (60HZ)
    ST7789_WriteCommand (handle,0xD0);				//	Power control
    ST7789_WriteSmallData (handle,0xA4);			//	Default value
    ST7789_WriteSmallData (handle, 0xA1);			//	Default value
	/**************** Division line ****************/

	ST7789_WriteCommand(handle,0xE0);
	{
		uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
		ST7789_WriteData(handle,data, sizeof(data));
	}

    ST7789_WriteCommand(handle,0xE1);
	{
		uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
		ST7789_WriteData(handle,data, sizeof(data));
	}
    ST7789_WriteCommand (handle,ST7789_INVON);		//	Inversion ON
	ST7789_WriteCommand (handle,ST7789_SLPOUT);	//	Out of sleep mode
  	ST7789_WriteCommand (handle,ST7789_NORON);		//	Normal Display on
  	ST7789_WriteCommand (handle,ST7789_DISPON);	//	Main screen turned on	

	
// 	ST7789_Fill_Color(0xBDF8);
// char temp_str[20] = {0,};
// snprintf(temp_str, 20, "T:%dC*", 20);
// ST7789_WriteString(1, 1, temp_str, Font_11x18, YELLOW, 0xBDF8);

// snprintf(temp_str, 20, "H:%dm", 22);
// ST7789_WriteString(1, 40, temp_str, Font_11x18, YELLOW, 0xBDF8);

// snprintf(temp_str, 20, "P:%dmm", 734);
// ST7789_WriteString(1, 20, temp_str, Font_11x18, YELLOW, 0xBDF8);

// snprintf(temp_str, 20, "%d:%d", 13, 44 );
// ST7789_WriteString(80, 105, temp_str, Font_16x26, YELLOW, 0xBDF8);

// snprintf(temp_str, 20, "Steps:%d", 0);
// ST7789_WriteString(1, 220, temp_str, Font_11x18, YELLOW, 0xBDF8);			//	Fill with Black.

}

void ST7789_Fill(spi_device_handle_t *handle, uint16_t xSta, uint16_t ySta, uint16_t xEnd, uint16_t yEnd, uint16_t color)
{
	if ((xEnd < 0) || (xEnd >= CONFIG_WIDTH) ||
		 (yEnd < 0) || (yEnd >= CONFIG_HEIGHT))	return;
	
	uint16_t i, j;
	ST7789_SetAddressWindow(handle, xSta, ySta, xEnd, yEnd);
	for (i = ySta; i <= yEnd; i++)
		for (j = xSta; j <= xEnd; j++) {
			uint8_t data[] = {color >> 8, color & 0xFF};
			ST7789_WriteData(handle, data, sizeof(data));
		}
	
}

void ST7789_DrawPixel(spi_device_handle_t *handle, uint16_t x, uint16_t y, uint16_t color)
{
	if ((x < 0) || (x >= CONFIG_WIDTH) ||
		 (y < 0) || (y >= CONFIG_HEIGHT))	return;
	
	ST7789_SetAddressWindow(handle, x, y, x, y);
	uint8_t data[] = {color >> 8, color & 0xFF};
	
	ST7789_WriteData(handle, data, sizeof(data));
	
}

void ST7789_DrawPixel_4px(spi_device_handle_t *handle, uint16_t x, uint16_t y, uint16_t color)
{
	if ((x <= 0) || (x > CONFIG_WIDTH) ||
		 (y <= 0) || (y > CONFIG_HEIGHT))	return;
	
	ST7789_Fill(handle, x - 1, y - 1, x + 1, y + 1, color);
	
}

void ST7789_DrawImage(spi_device_handle_t *handle, uint16_t x, uint16_t y, uint16_t w, uint16_t h, const uint16_t *data)
{
	if ((x >= CONFIG_WIDTH) || (y >= CONFIG_HEIGHT))
		return;
	if ((x + w - 1) >= CONFIG_WIDTH)
		return;
	if ((y + h - 1) >= CONFIG_HEIGHT)
		return;

	
	ST7789_SetAddressWindow(handle, x, y, x + w - 1, y + h - 1);
	ST7789_WriteData(handle, (uint8_t *)data, sizeof(uint16_t) * w * h);

}

void ST7789_WriteString(spi_device_handle_t *handle, uint16_t x, uint16_t y, const char *str, FontDef font, uint16_t color, uint16_t bgcolor)
{
	
	while (*str) {
		if (x + font.width >= CONFIG_WIDTH) {
			x = 0;
			y += font.height;
			if (y + font.height >= CONFIG_HEIGHT) {
				break;
			}

			if (*str == ' ') {
				// skip spaces in the beginning of the new line
				str++;
				continue;
			}
		}
		ST7789_WriteChar(handle, x, y, *str, font, color, bgcolor);
		x += font.width;
		str++;
	}
	
}

void ST7789_DrawFilledRectangle(spi_device_handle_t *handle, uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color)
{
	
	uint8_t i;

	/* Check input parameters */
	if (x >= CONFIG_WIDTH ||
		y >= CONFIG_HEIGHT) {
		/* Return error */
		return;
	}

	/* Check width and height */
	if ((x + w) >= CONFIG_WIDTH) {
		w = CONFIG_WIDTH - x;
	}
	if ((y + h) >= CONFIG_HEIGHT) {
		h = CONFIG_HEIGHT - y;
	}

	/* Draw lines */
	for (i = 0; i <= h; i++) {
		/* Draw lines */
		ST7789_DrawLine(handle, x, y + i, x + w, y + i, color);
	}
	
}

void ST7789_Test(spi_device_handle_t *handle)
{
	ST7789_Fill_Color(handle, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);
	//ST7789_WriteString(10, 20, "Speed Test", Font_11x18, RED, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, CYAN);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, RED);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, BLUE);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, GREEN);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, YELLOW);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, BROWN);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, DARKBLUE);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, MAGENTA);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, LIGHTGREEN);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, LGRAY);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, LBBLUE);
    vTaskDelay(500/ portTICK_PERIOD_MS);
	ST7789_Fill_Color(handle, WHITE);
	vTaskDelay(500/ portTICK_PERIOD_MS);

	ST7789_WriteString(handle, 10, 10, "Font test.", Font_16x26, GBLUE, WHITE);
	ST7789_WriteString(handle, 10, 50, "Hello Steve!", Font_7x10, RED, WHITE);
	ST7789_WriteString(handle, 10, 75, "Hello Steve!", Font_11x18, YELLOW, WHITE);
	ST7789_WriteString(handle, 10, 100, "Hello Steve!", Font_16x26, MAGENTA, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);

	ST7789_Fill_Color(handle, RED);
	ST7789_WriteString(handle, 10, 10, "Rect./Line.", Font_11x18, YELLOW, RED);
	ST7789_DrawRectangle(handle, 30, 30, 100, 100, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);

	ST7789_Fill_Color(handle, RED);
	ST7789_WriteString(handle, 10, 10, "Filled Rect.", Font_11x18, YELLOW, RED);
	ST7789_DrawFilledRectangle(handle, 30, 30, 50, 50, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);


	ST7789_Fill_Color(handle, RED);
	ST7789_WriteString(handle, 10, 10, "Circle.", Font_11x18, YELLOW, RED);
	ST7789_DrawCircle(handle, 60, 60, 25, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);

	ST7789_Fill_Color(handle, RED);
	ST7789_WriteString(handle, 10, 10, "Filled Cir.", Font_11x18, YELLOW, RED);
	ST7789_DrawFilledCircle(handle, 60, 60, 25, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);

	ST7789_Fill_Color(handle, RED);
	ST7789_WriteString(handle, 10, 10, "Triangle", Font_11x18, YELLOW, RED);
	ST7789_DrawTriangle(handle, 30, 30, 30, 70, 60, 40, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);

	ST7789_Fill_Color(handle, RED);
	ST7789_WriteString(handle, 10, 10, "Filled Tri", Font_11x18, YELLOW, RED);
	ST7789_DrawFilledTriangle(handle, 30, 30, 30, 70, 60, 40, WHITE);
	vTaskDelay(1000 / portTICK_PERIOD_MS);

	//	If FLASH cannot storage anymore datas, please delete codes below.
	ST7789_Fill_Color(handle, WHITE);
	//ST7789_DrawImage(0, 0, 128, 128, (uint16_t *)saber);
	vTaskDelay(3000/ portTICK_PERIOD_MS);
}
